Доработан второй экран "О проекте". Созданы карточки фичей

--- a/application/index.html
+++ b/application/index.html
@@ -47,7 +47,7 @@
                 <img id="doc-1" alt="Доктор">
             </div>
             <div class=" qrcode col-6">
-                <object id="qrcode-download" class="justify-content-center" data="/public/img/qr-code.svg"
+                <object id="qrcode-download" class="justify-content-center" data="/application/public/img/qr-code.svg"
                     type="image/svg+xml" width="250px"></object>
                 <p class="additional-text mt-4">Наведите камеру на QR-код <br> и скачайте приложение</p>
             </div>
@@ -57,16 +57,54 @@
     <!-- О проекте -->
     <div class="screen">
         <div class="block col-12">
-            <div class="about col-6 d-flex justify-content-center mt-4">
+            <div class="about col-6 d-flex justify-content-start mt-4">
                 <h4>Личный медицинский ассистент у Вас в телефоне</h4>
                 <img id="doc-shield" alt="" width="530px">
             </div>
+            <div class="about col-6 d-flex justify-content-start mt-4">
+                <h4>Мобильное приложение в котором:</h4>
+                <div class="custom-card mb-2 mt-4">
+                    <div class="d-flex align-items-center">
+                        <img src="/application/public/img/molekul.png" alt="молекулы" width="72px">
+                    </div>
+                    <div class="text-card">
+                        <h5>Сохраняются результаты ваших анализов</h5>
+                        <p class="additional-text">Сейчас представлено 20 самых популярных анализов</p>
+                    </div>
+                </div>
+                <div class="custom-card mb-2 mt-2">
+                    <div class="d-flex align-items-center">
+                        <img src="/application/public/img/check.png" alt="молекулы" width="72px">
+                    </div>
+                    <div class="text-card">
+                        <h5>Работает система уведомлений</h5>
+                        <p class="additional-text">Сейчас представлено 20 самых популярных анализов</p>
+                    </div>
+                </div>
+                <div class="custom-card mb-2 mt-2">
+                    <div class="d-flex align-items-center">
+                        <img src="/application/public/img/Dashboard.png" alt="молекулы" width="72px">
+                    </div>
+                    <div class="text-card">
+                        <h5>Сторятся графики антропометрии</h5>
+                        <p class="additional-text">Сейчас представлено 20 самых популярных анализов</p>
+                    </div>
+                </div>
+                <div class="custom-card mb-2 mt-2">
+                    <div class="d-flex align-items-center">
+                        <img src="/application/public/img/red-day.png" alt="молекулы" width="72px">
+                    </div>
+                    <div class="text-card">
+                        <h5>Календарь месячных</h5>
+                        <p class="additional-text">Сейчас представлено 20 самых популярных анализов</p>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
 
 </body>
 
 
-<script src=" /src/script.js"></script>
+<script src=" /application/src/script.js"></script>
 
 </html>
